<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="48sp" />


        <LinearLayout
            android:id="@+id/linearLayoutDiscription"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewName"
            >

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textFieldDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/label_description"
                android:orientation="vertical"
                app:startIconDrawable="@drawable/ic_character_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_character_description" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textFieldClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_class"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutDiscription"
            tools:layout_editor_absoluteX="32dp"
            app:startIconDrawable="@drawable/ic_character_class">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_character_class" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textFieldPowers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_powers"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textFieldClass"
            app:startIconDrawable="@drawable/ic_character_powers"
            tools:layout_editor_absoluteX="32dp">

            <com.google.android.material.textfield.TextInputEditText
                app:startIconDrawable="@drawable/ic_character_powers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:id="@+id/textFieldWeapon1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/label_weapon1"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textFieldPowers"
            tools:layout_editor_absoluteX="32dp"
            app:startIconDrawable="@drawable/ic_character_weapon1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextWeapon1"
                app:startIconDrawable="@drawable/ic_character_weapon1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textFieldWeapon2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_weapon2"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textFieldWeapon1"
            tools:layout_editor_absoluteX="32dp"
            app:startIconDrawable="@drawable/ic_character_weapon2">

            <com.google.android.material.textfield.TextInputEditText
                app:startIconDrawable="@drawable/ic_character_weapon2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textFieldArmor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_armor"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textFieldWeapon2"
            tools:layout_editor_absoluteX="32dp"
            app:startIconDrawable="@drawable/ic_character_armor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextInputEditTextArmor"
                app:startIconDrawable="@drawable/ic_character_armor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textFieldEquipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/label_equipment"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textFieldArmor"
            tools:layout_editor_absoluteX="32dp"
            app:startIconDrawable="@drawable/ic_character_equipment">

            <com.google.android.material.textfield.TextInputEditText
                app:startIconDrawable="@drawable/ic_character_equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutOmensSilver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/textFieldEquipment"
            app:layout_constraintStart_toStartOf="@+id/textFieldEquipment"
            app:layout_constraintTop_toBottomOf="@id/textFieldEquipment"
            android:divider="@drawable/activity_main_linear_layout_omens_silver_divider"
            android:showDividers="middle">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textFieldSilver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_silver"
                android:orientation="vertical"
                app:startIconDrawable="@drawable/ic_character_savings"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextSilver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_character_savings"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textFieldOmens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_omens"
                android:orientation="vertical"
                app:startIconDrawable="@drawable/ic_character_omens"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputEditTextOmens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_character_omens"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>